chore: sync beads

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,29 @@ next-env.d.ts
 .worktrees/PD-cls/
 # bd worktree
 .worktrees/PD-0ye/
+# bd worktree
+.worktrees/PD-1nz/
+# bd worktree
+.worktrees/PD-jks/
+# bd worktree
+.worktrees/PD-apo/
+# bd worktree
+.worktrees/PD-ud0/
+# bd worktree
+.worktrees/PD-0lz/
+# bd worktree
+.worktrees/PD-pj7/
+# bd worktree
+.worktrees/PD-9kh/
+# bd worktree
+.worktrees/PD-ais/
+# bd worktree
+PD-5jy/
+# bd worktree
+PD-c94/
+# bd worktree
+PD-6zm/
+# bd worktree
+PD-7g3/
+# bd worktree
+PD-23t/
